Splash page placeholder

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 		<div id="sell" class="container_12">
-			<img src="images/insta.png" width="960" />
+			<img src="images/splash.png" width="960" />
 		</div>
 		<div class="container_12">
 			<h1>Signup</h1>
