Making the form from the front page work with the nice urls. *hack alert*

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,12 @@
 		</div>
 		<div class="container_12">
 			<h1>Signup</h1>
-		
+			
+			<form action="microsites/site_redirect">
+				<input name="topic"/ type="text"/>
+				<input name="location"/ type="text"/>				
+				<input name="Generate!" type="submit"/>
+			</form>
 			
 		</div>
 		
