--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>Insta-Microsite-Maker</title>
+    <title>Million-Dollar Microsite-Maker</title>
 		<link rel="stylesheet" href="stylesheets/960.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="stylesheets/insta.css" type="text/css" media="screen" />		
 
@@ -12,20 +12,35 @@
 		<div id="sell" class="container_12">
 			<img src="images/splash.png" width="960" />
 		</div>
-		<div class="container_12">
-			<h1>Signup</h1>
+		<div id="explanation" class="container_12">
+
+			<div class="grid_6">
+				<h2>How it works</h2>
+				<ol>
+					<li>Pick a topic and city</li>
+					<li>Fill out the form to instantly assemble a web site</li>
+					<li>???</li>
+					<li>PROFIT!</li>
+				</ol>
+			</div>
 			
-			<form action="microsites/site_redirect">
-				<input name="topic"/ type="text"/>
-				<input name="location"/ type="text"/>				
-				<input name="Generate!" type="submit"/>
-			</form>
+			<div id="action" class="grid_6">
+				<h2>Give it a whirl</h2>
+				<form action="microsites/site_redirect">
+					<p>Make a site about
+					<input value="" name="topic"/ type="text"/> in
+					<input value="" name="location"/ type="text"/>.
+					</p>
+					<input value="Make me rich!" type="submit"/>
+					</p>
+				</form>
+			</div>
 			
 		</div>
 		
 		<div id="footer">
 			<div class="container_12">
-				<p>asdfasdf</p>
+				<p>Nick Hoffman and Andrew Louis—ruining the internet for the rest of you since 2010.</p>
 			</div>
 		</div>
 		
