Small mark-up changes.

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 		
 		<div id="footer">
 			<div class="container_12">
-				<p>Nick Hoffman and Andrew Louis—ruining the internet for the rest of you since 2010.</p>
+        <p><a href='http://twitter.com/nphoffman'>Nick Hoffman</a> and <a href='http://twitter.com/hyfen'>Andrew Louis</a> — ruining the internet since 2010.</p>
 			</div>
 		</div>
 		
